syntax = "proto3";
package com.linkedout.proto.dto.reference;

import "models/address.proto";

message CreateReferenceDto {
  string first_name = 1;
  string last_name = 2;
  models.Address address = 3;
  string phone = 4;
  string email = 5;
  string company_id = 6;
}
